--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Sample Project</title>
-    <!-- data-main attribute tells require.js to load
-         scripts/main.js after require.js loads. -->
+    <title>Tic Tac Toe</title>
     <script data-main="scripts/main" src="libs/require.js"></script>
     <link rel="stylesheet" href="scripts/main.css">
 </head>
